[package]
name = "adaptor-firmware"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common = {path="../common"}
# adaptor-core = {git = ""}
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
embedded-hal = "0.2.4"
nb = "1.0.0"
volatile = "0.4.3"
heapless = "0.5.6"
bxcan = "0.4.0"
defmt = "0.1.3"
defmt-rtt = "0.1.0"
bitfield = "0.13.2"
postcard = "0.5.1"

[dependencies.stm32f1xx-hal]
version = ""
features = ["stm32f103", "rt", "stm32-usbd"]

[dependencies.adaptor-common]
git = "https://github.com/BBScholar/can-probe-rs.git"

[[bin]]
name = "adaptor-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
lto = true
opt-level = 'z'

[profile.release.package.'*']
opt-level = 'z'
debug = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true 
lto = true
opt-level = 'z'

[profile.dev.package.'*']
opt-level = 'z'
debug = true
