[package]
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"
name = "adaptor-firmware"
version = "0.1.0"
[[bin]]
bench = false
name = "adaptor-firmware"
test = false

[dependencies]
bitfield = "0.13.2"
bxcan = "0.4.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
defmt = "0.1.3"
defmt-rtt = "0.1.0"
embedded-hal = "0.2.4"
heapless = "0.5.6"
nb = "1.0.0"
postcard = "0.5.1"
synopsys-usb-otg = {version = "0.2", features = ["hs"]}
usb-device = "*"
usbd-serial = "*"

[dependencies.adaptor-common]
git = "https://github.com/BBScholar/can-probe-rs"

[dependencies.serde]
default-features = false
version = "1.0.123"

[dependencies.stm32f1xx-hal]
branch = "master"
default-features = false
features = ["stm32f105", "rt", "stm32-usbd"]
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"

[features]
default = ["stm32f1xx-hal/stm32-usbd", "synopsys-usb-otg/cortex-m"]

[profile]
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = true
opt-level = "z"

[profile.dev.package]
[profile.dev.package."*"]
debug = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
lto = true
opt-level = "z"

[profile.release.package]
[profile.release.package."*"]
debug = false
opt-level = "z"
